--- a/app/globals.css
+++ b/app/globals.css
@@ -57,6 +57,10 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+  @font-face {
+    font-family: "kirame";
+    src: url("/fonts/kirame.ttf") format("truetype");
+  }
 }
 
 @layer base {
@@ -65,5 +69,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    margin: 0;
+    padding: 0;
   }
 }
